# fake

./: CLAUDE.md  Cargo.toml  DISK.md  PLAN.md  README.md  example.txt  mem.org
src/: disk.rs  main.rs  markov.rs
