[package]
name = "fake"
version = "0.2.1"
authors = ["Joshua Davey <josh@joshuadavey.com>"]
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
strena = { git = "https://github.com/jgdavey/strena.git", rev = "f6122b94ff605f8dafa435d1bca757ce975f7031" }
tokio = { version = "1.3", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
