[package]
name = "fake"
version = "0.2.2"
authors = ["Joshua Davey <josh@joshuadavey.com>"]
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
indexmap = "2"
memmap2 = "0.9"
rand = "0.10"
tokio = { version = "1.50", features = ["full"] }
warp = { version = "0.4", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
